2015-09-09 Simon Flöry <simon.floery@rechenraum.com>
	* renaming 'configure.in' to 'configure.ac'

##############################################
# 2015-09-05 galculator 2.1.4 released       #
##############################################

2015-09-05 Simon Flöry <simon.floery@rechenraum.com>
	* adding a fresh "tx pull" of translations (thanks to all translators!)
	* adding an appdata file (thanks to Alexander)

2014-05-17 Simon Flöry <simon.floery@rechenraum.com>
	* in ui.c::set_all_dispctrl_buttons_property check for table_children != NULL
		(fixes sf.net bug #107, thanks to Chris LaFleur for reporting)
	* *.c: all dynamic memory allocation and free'ing is done via glib now.
	* Changed default background color for the display to white. 

2014-05-07 Simon Flöry <simon.floery@rechenraum.com>
	* In callbacks.c and general_functions.c, team up every 
		gtk_check_menu_item_set_active with a gtk_check_menu_item_toggled. See
		also 2014-01-08 and sf.net bug #99.
		(fixes sf.net bug #105, thanks to Don for reporting)

2014-03-20 Simon Flöry <simon.floery@rechenraum.com>
	* translations are now served through transifex (thanks to the MATE project,
		in particular to Stefano and Martin)
	* adding a fresh "tx pull" of translations (thanks to all translators!)
		
2014-03-16 Simon Flöry <simon.floery@rechenraum.com>
	* set_basic_object_data/set_scientific_object_data make structs static 
		(fixes sf.net bug #104, thanks to Campbell Barton for reporting)

##############################################
# 2013-03-13 galculator 2.1.3 released       #
##############################################

2014-03-07 Simon Flöry <simon.floery@rechenraum.com>
	* Added Spanish tranlsation (thanks to jcsl, sf.net patch #8)

2014-02-19 Simon Flöry <simon.floery@rechenraum.com>
	* Fixed segfault introduced in r134

2014-01-13 Simon Flöry <simon.floery@rechenraum.com>
	* Updated Turkish translations (thanks to Volkan, fixes sf.net #103)

2014-01-08 Simon Flöry <simon.floery@rechenraum.com>