@@ -1,1 +1,2 @@
 ui/about.ui
+src/flex_parser.c
